Reduce noise when running tests