@@ -28,6 +28,10 @@ internal class AndroidPlugin : Plugin<Project> {
 						// > Java HotSpot(TM) 64-Bit Server VM warning:
 						// > Sharing is only supported for boot loader classes because bootstrap classpath has been appended
 						task.jvmArgs("-Xshare:off")
+						if (task.javaVersion.isCompatibleWith(JavaVersion.VERSION_21)) {
+							// https://github.com/mockito/mockito/issues/3037#issuecomment-1588199599
+							task.jvmArgs("-XX:+EnableDynamicAgentLoading")
+						}
 					}
 				}
 			}
